# Election-API-Client

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CI_FIXES.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  HOW_TO_CREATE_PR.md  LICENSE  OPTIMIZATION_SUMMARY.md  PR_DESCRIPTION.md  PR_SUMMARY.md  README.md  SECURITY_AUDIT.md  SECURITY_FIXES.md  debug_lifespan.py  debug_start.py  docker-compose.yml  pyproject.toml  requirements.txt  run_server.py  start_client.sh  test_create_tables.py  test_db.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: entities.py  relationships.py
app/core/: auth.py  config.py  database.py  exceptions.py  logging.py  security.py
app/models/: __init__.py  entity.py  relationship.py
app/schemas/: __init__.py  common.py  entity.py  relationship.py
database/: import_all_data.sh  import_entities.py
frontend/: index.html  leaders.html  map.html
frontend/data/: nepal-provinces.geojson
frontend/js/: api.js  config.js  main.js  utils.js
frontend/styles/: animations.css  components.css  main.css
migrations/: env.py
scripts/: generate_nepal_map.py  seed_sample_data.py
tests/: test_main.py
